--- a/index.html
+++ b/index.html
@@ -377,12 +377,9 @@
                     <nav class="flex flex-col gap-3">
                         <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm"
                             href="./contacto.html">Contáctanos</a>
-                        <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm" href="#">Envíos y
-                            Devoluciones</a>
-                        <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm" href="#">Localizador
+                        <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm"
+                            href="./contacto.html">Localizador
                             de Tiendas</a>
-                        <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm" href="#">Preguntas
-                            Frecuentes</a>
                     </nav>
                 </div>
             </div>
