Corrección de errores críticos: se repararon contenedores HTML abiertos y se añadió seguridad al script de Tailwind para evitar pantalla en blanco

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-    <link rel="stylesheet" href="/index.css">
+
 </head>
 
 <body class="bg-white text-[#27724e] transition-colors duration-300 antialiased">
@@ -394,7 +394,7 @@
             </div>
         </div>
     </footer>
-    <script type="module" src="/index.tsx"></script>
+
     <!-- Cart Drawer -->
     <div id="cart-drawer" class="fixed inset-0 z-[100] hidden" aria-labelledby="slide-over-title" role="dialog"
         aria-modal="true">
@@ -464,6 +464,8 @@
                 </div>
             </div>
         </div>
+    </div>
+    </div>
     </div>
 </body>
 
