Actualización de precios y selector de tamaño para Agua de Mar

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
-
+    <link rel="stylesheet" href="/index.css">
 </head>
 
 <body class="bg-white text-[#27724e] transition-colors duration-300 antialiased">
@@ -377,9 +377,12 @@
                     <nav class="flex flex-col gap-3">
                         <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm"
                             href="./contacto.html">Contáctanos</a>
-                        <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm"
-                            href="./contacto.html">Localizador
+                        <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm" href="#">Envíos y
+                            Devoluciones</a>
+                        <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm" href="#">Localizador
                             de Tiendas</a>
+                        <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm" href="#">Preguntas
+                            Frecuentes</a>
                     </nav>
                 </div>
             </div>
@@ -394,7 +397,7 @@
             </div>
         </div>
     </footer>
-
+    <script type="module" src="/index.tsx"></script>
     <!-- Cart Drawer -->
     <div id="cart-drawer" class="fixed inset-0 z-[100] hidden" aria-labelledby="slide-over-title" role="dialog"
         aria-modal="true">
@@ -464,8 +467,6 @@
                 </div>
             </div>
         </div>
-    </div>
-    </div>
     </div>
 </body>
 
