Actualización de horarios y descripción en nosotros y contacto

--- a/nosotros.html
+++ b/nosotros.html
@@ -157,7 +157,8 @@
                     </h1>
                     <div class="w-20 h-1 bg-[#27724e]/10 mb-8"></div>
                     <p class="text-lg text-[#27724e]/80 leading-relaxed mb-8">
-                        En nuestro centro de terapias oxidativas, la naturópata funcional e integrativa Jackelin Laza se
+                        En nuestro centro de terapias oxidativas y oncologia integrativa, la naturópata funcional e
+                        integrativa Jackelin Laza se
                         dedica a proporcionar tratamientos eficaces con agua de mar y ozono para revitalizar tu cuerpo y
                         mejorar tu salud.
                     </p>
