Actualización footer: eliminación de enlaces de soporte y redirección de localizador

--- a/tienda.html
+++ b/tienda.html
@@ -1976,12 +1976,8 @@
                     <nav class="flex flex-col gap-3">
                         <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm"
                             href="./contacto.html">Contáctanos</a>
-                        <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm" href="#">Envíos
-                            y Devoluciones</a>
-                        <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm" href="#">Localizador
-                            de Tiendas</a>
-                        <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm" href="#">Preguntas
-                            Frecuentes</a>
+                        <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm"
+                            href="./contacto.html">Localizador de Tiendas</a>
                     </nav>
                 </div>
             </div>
