Unificación y actualización de footer en todo el sitio

--- a/contacto.html
+++ b/contacto.html
@@ -259,11 +259,70 @@
         </main>
 
         <footer class="bg-[#FBFAF8] border-t border-[#27724e]/10 pt-20 pb-10">
-            <!-- Footer Content Identical to Index -->
             <div class="max-w-[1440px] mx-auto px-6 md:px-20">
+                <div class="grid grid-cols-1 md:grid-cols-4 gap-12 mb-20">
+                    <div class="flex flex-col gap-6">
+                        <div class="flex flex-col leading-none">
+                            <span class="text-[10px] uppercase tracking-[0.2em] text-[#C5A059] font-bold">Tienda
+                                Orgánica</span>
+                            <h2 class="text-xl font-serif font-bold text-[#27724e] tracking-tight">Jackelin Laza</h2>
+                        </div>
+                        <p class="text-[#27724e]/80 text-sm leading-relaxed">
+                            Ofreciendo una variedad de terapias con agua de mar y ozono para mejorar tu bienestar,
+                            dirigido
+                            por la licenciada Jackelin Laza.
+                        </p>
+                    </div>
+                    <div class="flex flex-col gap-6">
+                        <h3 class="font-black text-sm uppercase tracking-widest text-[#27724e]">Productos</h3>
+                        <nav class="flex flex-col gap-3">
+                            <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm"
+                                href="./tienda.html">Sistema Digestivo</a>
+                            <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm"
+                                href="./tienda.html">Sistema Inmune</a>
+                            <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm"
+                                href="./tienda.html">Sistema Nervioso</a>
+                            <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm"
+                                href="./tienda.html">Sistema Osteoarticular</a>
+                            <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm"
+                                href="./tienda.html">Sistema Hormonal</a>
+                            <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm"
+                                href="./tienda.html">Sistema Próstata</a>
+                            <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm"
+                                href="./tienda.html">Energía y Metabolismo</a>
+                        </nav>
+                    </div>
+                    <div class="flex flex-col gap-6">
+                        <h3 class="font-black text-sm uppercase tracking-widest text-[#27724e]">Nuestra Marca</h3>
+                        <nav class="flex flex-col gap-3">
+                            <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm"
+                                href="./nosotros.html">La Historia</a>
+                            <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm"
+                                href="./nosotros.html">Ética de Origen</a>
+                            <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm"
+                                href="./nosotros.html">Sostenibilidad</a>
+                            <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm"
+                                href="./contacto.html">Venta al por mayor</a>
+                        </nav>
+                    </div>
+                    <div class="flex flex-col gap-6">
+                        <h3 class="font-black text-sm uppercase tracking-widest text-[#27724e]">Soporte</h3>
+                        <nav class="flex flex-col gap-3">
+                            <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm"
+                                href="./contacto.html">Contáctanos</a>
+                            <a class="text-[#27724e]/70 hover:text-[#27724e] transition-colors text-sm"
+                                href="./contacto.html">Localizador de Tiendas</a>
+                        </nav>
+                    </div>
+                </div>
                 <div
                     class="pt-8 border-t border-[#27724e]/5 flex flex-col md:flex-row justify-between items-center gap-4 text-xs text-[#27724e]/60 font-medium uppercase tracking-widest">
                     <p>© 2024 Jackelin Laza - Tienda Orgánica. Todos los derechos reservados.</p>
+                    <div class="flex gap-8">
+                        <a class="hover:text-[#27724e] transition-colors" href="#">Política de Privacidad</a>
+                        <a class="hover:text-[#27724e] transition-colors" href="#">Términos de Servicio</a>
+                        <a class="hover:text-[#27724e] transition-colors" href="#">Accesibilidad</a>
+                    </div>
                 </div>
             </div>
         </footer>
