Remoción de estrellas y habilitación de variantes en modal de producto

--- a/tienda.html
+++ b/tienda.html
@@ -1758,14 +1758,7 @@
                             </button>
                         </div>
                         <div class="flex flex-col flex-1 gap-1">
-                            <div class="flex text-[#C5A059] text-[16px]">
-                                <span class="material-symbols-outlined text-[16px]">star</span>
-                                <span class="material-symbols-outlined text-[16px]">star</span>
-                                <span class="material-symbols-outlined text-[16px]">star</span>
-                                <span class="material-symbols-outlined text-[16px]">star</span>
-                                <span class="material-symbols-outlined text-[16px]">star</span>
-                                <span class="text-xs text-[#27724e]/60 ml-1 pt-[2px]">(New)</span>
-                            </div>
+
                             <h3
                                 class="font-bold text-lg leading-tight group-hover:text-[#27724e] transition-colors text-[#27724e] uppercase">
                                 Gotas Oftalmológicas</h3>
@@ -1794,14 +1787,7 @@
                             </button>
                         </div>
                         <div class="flex flex-col flex-1 gap-1">
-                            <div class="flex text-[#C5A059] text-[16px]">
-                                <span class="material-symbols-outlined text-[16px]">star</span>
-                                <span class="material-symbols-outlined text-[16px]">star</span>
-                                <span class="material-symbols-outlined text-[16px]">star</span>
-                                <span class="material-symbols-outlined text-[16px]">star</span>
-                                <span class="material-symbols-outlined text-[16px]">star</span>
-                                <span class="text-xs text-[#27724e]/60 ml-1 pt-[2px]">(New)</span>
-                            </div>
+
                             <h3
                                 class="font-bold text-lg leading-tight group-hover:text-[#27724e] transition-colors text-[#27724e] uppercase">
                                 Molle</h3>
@@ -1829,14 +1815,7 @@
                             </button>
                         </div>
                         <div class="flex flex-col flex-1 gap-1">
-                            <div class="flex text-[#C5A059] text-[16px]">
-                                <span class="material-symbols-outlined text-[16px]">star</span>
-                                <span class="material-symbols-outlined text-[16px]">star</span>
-                                <span class="material-symbols-outlined text-[16px]">star</span>
-                                <span class="material-symbols-outlined text-[16px]">star</span>
-                                <span class="material-symbols-outlined text-[16px]">star</span>
-                                <span class="text-xs text-[#27724e]/60 ml-1 pt-[2px]">(New)</span>
-                            </div>
+
                             <h3
                                 class="font-bold text-lg leading-tight group-hover:text-[#27724e] transition-colors text-[#27724e] uppercase">
                                 Plata Coloidal</h3>
@@ -1864,14 +1843,7 @@
                             </button>
                         </div>
                         <div class="flex flex-col flex-1 gap-1">
-                            <div class="flex text-[#C5A059] text-[16px]">
-                                <span class="material-symbols-outlined text-[16px]">star</span>
-                                <span class="material-symbols-outlined text-[16px]">star</span>
-                                <span class="material-symbols-outlined text-[16px]">star</span>
-                                <span class="material-symbols-outlined text-[16px]">star</span>
-                                <span class="material-symbols-outlined text-[16px]">star</span>
-                                <span class="text-xs text-[#27724e]/60 ml-1 pt-[2px]">(New)</span>
-                            </div>
+
                             <h3
                                 class="font-bold text-lg leading-tight group-hover:text-[#27724e] transition-colors text-[#27724e] uppercase">
                                 Propóleo</h3>
@@ -2023,6 +1995,15 @@
                                 </h2>
 
                                 <p id="modal-price" class="text-3xl font-light text-[#D47253] mb-6">S/. 0.00</p>
+
+                                <!-- Contenedor de Variantes (Tamaño/Presentación) -->
+                                <div id="modal-variants-container" class="mb-6 hidden">
+                                    <label
+                                        class="block text-[10px] font-bold text-[#27724e]/40 uppercase mb-1 tracking-widest">Seleccionar
+                                        Opción:</label>
+                                    <div id="modal-selector-wrapper"></div>
+                                </div>
+
                                 <div class="prose text-[#27724e]/80 mb-8 max-w-none text-base leading-relaxed">
                                     <p id="modal-description">Descripción...</p>
                                 </div>
