Actualización de imagen de Muérdago y sincronización de Agua de Mar

--- a/tienda.html
+++ b/tienda.html
@@ -734,7 +734,7 @@
                         class="group flex flex-col gap-4 bg-[#FBFAF8] p-4 rounded-3xl border border-[#27724e]/5 hover:border-[#27724e]/20 hover:shadow-xl transition-all duration-300">
                         <div class="relative overflow-hidden rounded-2xl aspect-[4/5] bg-white shadow-inner">
                             <div class="absolute inset-0 bg-contain bg-no-repeat bg-center transition-transform duration-700 group-hover:scale-110"
-                                style='background-image: url("muerdago.jpg");'></div>
+                                style='background-image: url("muerdago.jpeg");'></div>
                             <button
                                 class="absolute top-3 right-3 bg-white/80 backdrop-blur p-2 rounded-full opacity-0 group-hover:opacity-100 transition-opacity hover:text-[#D47253]">
                                 <span class="material-symbols-outlined text-sm">favorite</span>
